# Referral_system

./: .gitignore  README.md  requirements.txt
referral_system/: config.py  conftest.py  exceptions.py  pyproject.toml  pytest.ini  requirements.txt
referral_system/referral_app/: admin.py  forms.py  models.py  test.py  tests.py  views.py
referral_system/referral_app/migrations/: 0001_initial.py  0002_alter_userprofile_access_token.py  0002_userprofile_email.py  0003_remove_userprofile_email.py  0004_userprofile_token_jwt.py  0005_userprofile_code_used.py  0006_remove_userprofile_code_used_userprofile_used_code_and_more.py  0007_rename_token_jwt_userprofile_access_token.py  0008_rename_authorization_code_userprofile_authentication_code.py
referral_system/referral_app/referral_app_services/: user.py
referral_system/referral_app/static/css/: style.css
referral_system/referral_app/templates/: account.html  authentication.html  base.html  login.html
referral_system/referral_app/tests/: test_account_access.py  test_user_authentication.py  test_user_login.py
referral_system/referral_system/: settings.py  urls.py
referral_system/referral_system/middleware/: middleware.py
